--- a/window.html
+++ b/window.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="background.js"></script>
 </head>
-<body>
+<body style="width:400px;">
 <div>Hello and welcome to Set Solver</div>
 <div>This is a Chrome Extension to upset Adryana</div>
-<div>Activate</div>
+<div>Press SPACEBAR to highlight Set!</div>
 </body>
 </html>
